Testing/MatrixClassTests/NSGTestcase/3D_FV_Stokes_fromL4/Debug/gen_3D_FV_Stokes_fromL4.txt
WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by com.rits.cloning.FastClonerTreeSet (file:/mnt/c/Users/MonPreacthyl/Desktop/BA/exastencils/classes/artifacts/Compiler_jar/Compiler.jar) to field java.util.TreeSet.m
WARNING: Please consider reporting this to the maintainers of com.rits.cloning.FastClonerTreeSet
WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
WARNING: All illegal access operations will be denied in a future release
DBG:   Setting debugL1File to ../Debug/3D_FV_Stokes_fromL4_debug.exa1
DBG:   Setting debugL2File to ../Debug/3D_FV_Stokes_fromL4_debug.exa2
DBG:   Setting debugL3File to ../Debug/3D_FV_Stokes_fromL4_debug.exa3
DBG:   Setting debugL4File to ../Debug/3D_FV_Stokes_fromL4_debug.exa4
DBG:   Setting htmlLogFile to ../Debug/3D_FV_Stokes_fromL4_log.html
DBG:   Setting l4file to ListBuffer(3D_FV_Stokes_fromL4.exa4)
DBG:   Result of strategy "Process discretization hints::Process": Transformation Result: successful, 0 matches
DBG:   Progressing 0 objects of collection L1_DomainCollection
DBG:   Progressing 0 objects of collection L1_FieldCollection
DBG:   Progressing 0 objects of collection L1_OperatorCollection
DBG:   Progressing 0 objects of collection L1_EquationCollection
DBG:   Progressing 0 objects of collection L1_FieldCombinationCollection
DBG:   Result of strategy "Process solver hints::Process": Transformation Result: successful, 0 matches
DBG:   Progressing 0 objects of collection L2_DomainCollection
DBG:   Progressing 0 objects of collection L2_FieldCollection
DBG:   Progressing 0 objects of collection L2_StencilCollection
DBG:   Progressing 0 objects of collection L2_StencilFieldCollection
DBG:   Progressing 0 objects of collection L2_VirtualFieldCollection
DBG:   Progressing 0 objects of collection L2_EquationCollection
DBG:   Progressing 0 objects of collection L2_FieldCombinationCollection
DBG:   Result of strategy "Process application hints::Process": Transformation Result: successful, 0 matches
DBG:   Progressing 0 objects of collection L3_DomainCollection
DBG:   Progressing 0 objects of collection L3_FieldCollection
DBG:   Progressing 0 objects of collection L3_StencilCollection
DBG:   Progressing 0 objects of collection L3_StencilFieldCollection
DBG:   Progressing 0 objects of collection L3_VirtualFieldCollection
DBG:   Progressing 0 objects of collection L3_EquationCollection
DBG:   Progressing 0 objects of collection L3_FieldCombinationCollection
WARN:  Critical error: Parse failure at position 138.1: end of input expected
Stencil A11@all{
^

WARN:  Stack trace:
exastencils.parsers.l4.L4_Parser$.parseTokens(L4_Parser.scala:76)
	at exastencils.parsers.l4.L4_Parser$.parse(L4_Parser.scala:50)
	at exastencils.parsers.l4.L4_Parser$.parseFile(L4_Parser.scala:62)
	at exastencils.app.l4.L4_DefaultLayerHandler$.$anonfun$handle$1(L4_LayerHandler.scala:104)
	at scala.collection.TraversableLike.$anonfun$map$1(TraversableLike.scala:238)
	at scala.collection.immutable.List.foreach(List.scala:392)
	at scala.collection.generic.TraversableForwarder.foreach(TraversableForwarder.scala:38)
	at scala.collection.generic.TraversableForwarder.foreach$(TraversableForwarder.scala:38)
	at scala.collection.mutable.ListBuffer.foreach(ListBuffer.scala:47)
	at scala.collection.TraversableLike.map(TraversableLike.scala:238)
	at scala.collection.TraversableLike.map$(TraversableLike.scala:231)
	at scala.collection.AbstractTraversable.map(Traversable.scala:108)
	at exastencils.app.l4.L4_DefaultLayerHandler$.handle(L4_LayerHandler.scala:104)
	at exastencils.app.ExaLayerHandler$.$anonfun$handleAllLayers$1(ExaLayerHandler.scala:52)
	at exastencils.app.ExaLayerHandler$.$anonfun$handleAllLayers$1$adapted(ExaLayerHandler.scala:52)
	at scala.collection.IndexedSeqOptimized.foreach(IndexedSeqOptimized.scala:36)
	at scala.collection.IndexedSeqOptimized.foreach$(IndexedSeqOptimized.scala:33)
	at scala.collection.mutable.ArrayOps$ofRef.foreach(ArrayOps.scala:198)
	at exastencils.app.ExaLayerHandler$.handleAllLayers(ExaLayerHandler.scala:52)
	at Main$.main(Main.scala:109)
	at Main.main(Main.scala)
Exception in thread "main" java.lang.Exception: Parse failure at position 138.1: end of input expected
Stencil A11@all{
^

	at exastencils.parsers.l4.L4_Parser$.parseTokens(L4_Parser.scala:76)
	at exastencils.parsers.l4.L4_Parser$.parse(L4_Parser.scala:50)
	at exastencils.parsers.l4.L4_Parser$.parseFile(L4_Parser.scala:62)
	at exastencils.app.l4.L4_DefaultLayerHandler$.$anonfun$handle$1(L4_LayerHandler.scala:104)
	at scala.collection.TraversableLike.$anonfun$map$1(TraversableLike.scala:238)
	at scala.collection.immutable.List.foreach(List.scala:392)
	at scala.collection.generic.TraversableForwarder.foreach(TraversableForwarder.scala:38)
	at scala.collection.generic.TraversableForwarder.foreach$(TraversableForwarder.scala:38)
	at scala.collection.mutable.ListBuffer.foreach(ListBuffer.scala:47)
	at scala.collection.TraversableLike.map(TraversableLike.scala:238)
	at scala.collection.TraversableLike.map$(TraversableLike.scala:231)
	at scala.collection.AbstractTraversable.map(Traversable.scala:108)
	at exastencils.app.l4.L4_DefaultLayerHandler$.handle(L4_LayerHandler.scala:104)
	at exastencils.app.ExaLayerHandler$.$anonfun$handleAllLayers$1(ExaLayerHandler.scala:52)
	at exastencils.app.ExaLayerHandler$.$anonfun$handleAllLayers$1$adapted(ExaLayerHandler.scala:52)
	at scala.collection.IndexedSeqOptimized.foreach(IndexedSeqOptimized.scala:36)
	at scala.collection.IndexedSeqOptimized.foreach$(IndexedSeqOptimized.scala:33)
	at scala.collection.mutable.ArrayOps$ofRef.foreach(ArrayOps.scala:198)
	at exastencils.app.ExaLayerHandler$.handleAllLayers(ExaLayerHandler.scala:52)
	at Main$.main(Main.scala:109)
	at Main.main(Main.scala)
